--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Header */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -50,6 +51,7 @@ p {
     font-size: 16px;
 }
 
+/* Center figure */
 .hero {
     height: 800px;
     width: 100%;
@@ -59,6 +61,7 @@ p {
     background-position: center;
 }
 
+/* Main */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -75,6 +78,29 @@ p {
     margin-left: 20px;
 }
 
+.services {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+/* consolidated three identical rules into one */
+
+.services {
+    max-height: 200px;
+}
+/* consolidated three identical rules into one */
+
+.services {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+/* consolidated three identical rules into one */
+
+
+/* Aside */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,19 +112,20 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 /* consolidate benefit-lead, benefit-brand, benefit-cost into one css rule */
 
-.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
+.benefit h2 {
     margin-bottom: 10px;
     text-align: center;
+    font-size: 1.2em;
 }
 /* consolidated 3 identical rules into one */
 
-.benefit-lead img, .benefit-brand img, .benefit-cost img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -126,6 +153,7 @@ p {
 }
 /* consolidated three identical rules into one */
 
+/* Footer */
 .footer {
     padding: 30px;
     clear: both;
