cleaned up comments, found and cleaned redundant css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ p {
     margin-left: 20px;
 }
 
-.services {
+.content .services {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -86,18 +86,15 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-/* consolidated three identical rules into one */
 
-.services {
+.content .services img {
     max-height: 200px;
 }
-/* consolidated three identical rules into one */
 
-.services {
+.content .services h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-/* consolidated three identical rules into one */
 
 
 /* Aside */
@@ -116,42 +113,20 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-/* consolidate benefit-lead, benefit-brand, benefit-cost into one css rule */
 
 .benefit h2 {
     margin-bottom: 10px;
     text-align: center;
     font-size: 1.2em;
 }
-/* consolidated 3 identical rules into one */
+
 
 .benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-/* consolidated 3 identical rules into one  */
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-/* consolidated three identical rules into one */
-
-.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
-    max-height: 200px;
-}
-/* consolidated three identical rules into one */
-
-.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-/* consolidated three identical rules into one */
 
 /* Footer */
 .footer {
